--- a/Part_1.ipynb
+++ b/Part_1.ipynb
@@ -1032,6 +1032,14 @@
     "else:\n",
     "    print(\"No data to plot for increased and decreased crime holidays.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9783c86f",
+   "metadata": {},
+   "source": [
+    "- This Graph shows that overall the number of crimes in holidays have been decreasing over the years, from past till today."
+   ]
   }
  ],
  "metadata": {
